objects/Alltricks_deals__c.object
<CustomObject>
    <fields>
        <fullName>Deal_created_On__c</fullName>
        <label>Deal_created_On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_description__c</fullName>
        <label>Deal_description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_from__c</fullName>
        <label>Deal_from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flipkart</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>SnapDeal</fullName>
                </value>
                <value>
                    <fullName>Abof</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_image_url__c</fullName>
        <label>Deal_image_url</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_name__c</fullName>
        <label>Deal_name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Alltricks_deals</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Dl-{00000}</displayFormat>
        <label>Alltricks_deals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alltricks_deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>